--- a/dashboard_v2.html
+++ b/dashboard_v2.html
@@ -19,7 +19,7 @@
 <link rel="modulepreload" href="./_import/components/gridded-glyphmaps/index.min.f034b425.js">
 <link rel="modulepreload" href="./_import/components/osgb/index.1d2476df.js">
 <link rel="modulepreload" href="./_import/components/model.0139f19a.js">
-<link rel="modulepreload" href="./_import/components/budgetAllocator.46c04ac3.js">
+<link rel="modulepreload" href="./_import/components/budgetAllocator.d01f7a60.js">
 <link rel="modulepreload" href="./_import/components/miniDecarbModel.f54b29e1.js">
 <link rel="modulepreload" href="./_import/components/sorterTable.b455407f.js">
 <link rel="modulepreload" href="./_import/components/timeline.b5ebcaf3.js">
@@ -208,14 +208,14 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1734122656401});
-registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1734122656413});
-registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1734122656413});
-registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1734122656413});
+registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1734168039953});
+registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1734168039961});
+registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1734168039961});
+registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1734168039965});
 registerTable("oxford", FileAttachment("./data/oxford_decarbonisation_data.parquet"));
 
 define({id: "f286dfde", outputs: ["d3","flubber","require","Mutable","TimeGlyph","GlyphCollection","turf","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","Model","BudgetAllocator","MiniDecarbModel","createTable","createTimelineInterface","YearPicker","inferTypes","enrichGeoData","normaliseData","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
-const [{require}, {Mutable}, {TimeGlyph, GlyphCollection}, turf, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {Model}, {BudgetAllocator}, {MiniDecarbModel}, {createTable}, {createTimelineInterface}, {YearPicker}, {inferTypes, enrichGeoData, normaliseData}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_import/components/glyph-designs/timeGlyph.30b74103.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_import/components/radialglyph.e10c9304.js"), import("./_import/components/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/model.0139f19a.js"), import("./_import/components/budgetAllocator.46c04ac3.js"), import("./_import/components/miniDecarbModel.f54b29e1.js"), import("./_import/components/sorterTable.b455407f.js"), import("./_import/components/timeline.b5ebcaf3.js"), import("./_import/components/yearpicker/yearpicker.84e70975.js"), import("./_import/components/helpers.ff512595.js"), import("./_import/components/utils.ca7eec9b.js")]);
+const [{require}, {Mutable}, {TimeGlyph, GlyphCollection}, turf, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {Model}, {BudgetAllocator}, {MiniDecarbModel}, {createTable}, {createTimelineInterface}, {YearPicker}, {inferTypes, enrichGeoData, normaliseData}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_import/components/glyph-designs/timeGlyph.30b74103.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_import/components/radialglyph.e10c9304.js"), import("./_import/components/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/model.0139f19a.js"), import("./_import/components/budgetAllocator.d01f7a60.js"), import("./_import/components/miniDecarbModel.f54b29e1.js"), import("./_import/components/sorterTable.b455407f.js"), import("./_import/components/timeline.b5ebcaf3.js"), import("./_import/components/yearpicker/yearpicker.84e70975.js"), import("./_import/components/helpers.ff512595.js"), import("./_import/components/utils.ca7eec9b.js")]);
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
 
@@ -417,46 +417,26 @@ allocationTypeInput
 ))
 }});
 
-define({id: "acdb1373", mode: "inline", inputs: ["svg","display"], body: async (svg,display) => {
-display(await(
-svg
-))
-}});
-
-define({id: "30f103b3", mode: "inline", inputs: ["html","addNewIntervention","display"], body: async (html,addNewIntervention,display) => {
+define({id: "e5ccc09b", mode: "inline", inputs: ["html","addNewIntervention","display"], body: async (html,addNewIntervention,display) => {
 display(await(
 html`
-          <button class="create-btn" type="button" onclick=${addNewIntervention}>
-            Add New Intervention
-          </button>
-        `
+        <button class="create-btn" type="button" onclick=${addNewIntervention}>
+          Add New Intervention
+        </button>
+      `
 ))
 }});
 
-define({id: "e39efb46", inputs: ["openModalBtn"], outputs: ["modal"], body: (openModalBtn) => {
+define({id: "26166479", outputs: ["modalBtn","modal"], body: () => {
 // Modal script
-// const confirmBtn = document.getElementById("confirmBtn");
-const modal = document.getElementById("simpleModal");
+let modalBtn = document.querySelector("[data-show-modal]");
+let modal = document.querySelector("dialog");
 
-// Open modal
-openModalBtn.addEventListener("click", () => {
-  console.log("clicked");
-  modal.style.display = "flex";
+// Show the modal
+modalBtn.addEventListener("click", function () {
+  modal.showModal();
 });
-
-// // Confirm action
-// confirmBtn.addEventListener("click", () => {
-//   console.log("Action confirmed!");
-//   modal.style.display = "none";
-// });
-
-// Close modal if clicking outside modal content
-window.addEventListener("click", (e) => {
-  if (e.target === modal) {
-    modal.style.display = "none";
-  }
-});
-return {modal};
+return {modalBtn,modal};
 }});
 
 define({id: "a6305aae", inputs: ["setSelectedIntervention","results","interventions"], outputs: ["selectedInterventionIndex","selectIntervention"], body: (setSelectedIntervention,results,interventions) => {
@@ -503,7 +483,7 @@ document
   });
 }});
 
-define({id: "b95bc78e", inputs: ["Inputs","html","selectedIntervention","Generators","Event","allColumns"], outputs: ["techsInput","technology","totalBudgetInput","total_budget","startYearInput","start_year","projectLengthInput","project_length","allocationTypeInput","allocation_type","priorityInput","priority_input","filterInput","filter_input","glyphmapTypeInput","glyphmapType","mapAggregationInput","map_aggregate","morphFactorInput","morph_factor"], body: (Inputs,html,selectedIntervention,Generators,Event,allColumns) => {
+define({id: "d544508b", inputs: ["Inputs","html","Event","Generators","allColumns"], outputs: ["techsInput","technology","totalBudgetInput","total_budget","startYearInput","start_year","projectLengthInput","project_length","allocationTypeInput","allocation_type","priorityInput","priority_input","filterInput","filter_input","glyphmapTypeInput","glyphmapType","mapAggregationInput","map_aggregate","morphFactorInput","morph_factor"], body: (Inputs,html,Event,Generators,allColumns) => {
 // list of decarb technologies
 const techsInput = Inputs.select(
   [
@@ -517,11 +497,16 @@ const techsInput = Inputs.select(
   ],
   {
     label: html`<b>Technology</b>`,
-    value: selectedIntervention ? selectedIntervention.techName : "ASHP",
-    disabled: selectedIntervention ? true : false,
+    value: "ASHP",
+    submit: true,
+    // disabled: selectedIntervention ? true : false,
   }
 );
 techsInput.style["max-width"] = "300px";
+Object.assign(techsInput, {
+  oninput: (event) => event.isTrusted && event.stopImmediatePropagation(),
+  onchange: (event) => event.currentTarget.dispatchEvent(new Event("input")),
+});
 const technology = Generators.input(techsInput);
 // display(techsInput);
 
@@ -529,15 +514,21 @@ const technology = Generators.input(techsInput);
 const totalBudgetInput = Inputs.text({
   label: html`<b>Total Budget</b>`,
   placeholder: "Available Budget in GBP",
-  disabled: selectedIntervention ? true : false,
-  value: selectedIntervention
-    ? Math.round(
-        (selectedIntervention.totalBudgetSpent + Number.EPSILON) * 100
-      ) / 100
-    : 100_000_000,
+  value: 100_000_000,
+  submit: true,
+  // disabled: selectedIntervention ? true : false,
+  // value: selectedIntervention
+  //   ? Math.round(
+  //       (selectedIntervention.totalBudgetSpent + Number.EPSILON) * 100
+  //     ) / 100
+  //   : 100_000_000,
   // submit: html`<button class="create-btn" style="color:white;">Submit</button>`,
 });
 totalBudgetInput.style["max-width"] = "300px";
+Object.assign(totalBudgetInput, {
+  oninput: (event) => event.isTrusted && event.stopImmediatePropagation(),
+  onchange: (event) => event.currentTarget.dispatchEvent(new Event("input")),
+});
 const total_budget = Generators.input(totalBudgetInput);
 
 // Start Year
@@ -554,15 +545,16 @@ const total_budget = Generators.input(totalBudgetInput);
 const startYearInput = html`<input
   style="width: 100%; max-width:100px; max-height: 25.5px;"
   type="number"
-  value=${selectedIntervention
-    ? Number(Object.keys(selectedIntervention.yearlyStats)[0])
-    : 2024}
+  value="2024"
   step="1"
   min="2024"
   max="2080"
-  disabled=${selectedIntervention ? true : false}
   label="Start Year"
 />`;
+Object.assign(startYearInput, {
+  oninput: (event) => event.isTrusted && event.stopImmediatePropagation(),
+  onchange: (event) => event.currentTarget.dispatchEvent(new Event("input")),
+});
 // console.log("startYearInput.style", startYearInput.columns);
 const start_year = Generators.input(startYearInput);
 
@@ -570,10 +562,7 @@ const start_year = Generators.input(startYearInput);
 const projectLengthInput = Inputs.range([0, 10], {
   // label: html`<b>Project length in years</b>`,
   step: 1,
-  value: selectedIntervention
-    ? Object.keys(selectedIntervention.yearlyStats).length
-    : 5,
-  disabled: selectedIntervention ? true : false,
+  value: 5,
 });
 projectLengthInput.number.style["max-width"] = "60px";
 Object.assign(projectLengthInput, {
@@ -586,7 +575,10 @@ const project_length = Generators.input(projectLengthInput);
 const allocationTypeInput = Inputs.radio(["linear", "sqrt", "exp", "cubic"], {
   // label: html`<b>Allocation Type</b>`,
   value: "linear",
-  disabled: selectedIntervention ? true : false,
+});
+Object.assign(allocationTypeInput, {
+  oninput: (event) => event.isTrusted && event.stopImmediatePropagation(),
+  onchange: (event) => event.currentTarget.dispatchEvent(new Event("input")),
 });
 const allocation_type = Generators.input(allocationTypeInput);
 
@@ -1064,19 +1056,8 @@ const cols = [
 return {cols};
 }});
 
-define({id: "20dd7e95", inputs: ["selectedIntervention","stackedResults","flatData","createTable","cols","setSelected"], outputs: ["tableData","table"], body: (selectedIntervention,stackedResults,flatData,createTable,cols,setSelected) => {
+define({id: "dbb36174", inputs: ["selectedIntervention","stackedResults","flatData","createTable","cols","setSelected"], outputs: ["tableData","table"], body: (selectedIntervention,stackedResults,flatData,createTable,cols,setSelected) => {
 const tableData = selectedIntervention ? stackedResults.buildings : flatData;
-
-// const tableData = selectedIntervention
-//   ? selectedIntervention.allBuildings.map((building) => ({
-//       ...building.properties,
-//       isIntervened: building.isIntervened,
-//     }))
-// : stackedResults
-// ? stackedResults.buildings
-//   : regular_geodata_withproperties;
-
-// (stackedResults ? stackedResults.buildings : flatData);
 
 const table = new createTable(tableData, cols, (changes) => {
   console.log("Table changed:", changes);
@@ -1991,7 +1972,7 @@ body, html {
             <observablehq-loading></observablehq-loading><!--:99933f19:-->
           </div> <!-- timeline panel -->
           <nav id="timeline-buttons">
-            <button id="openModalBtn" class="btn" aria-label="Add">
+            <button id="openModalBtn" data-show-modal="" class="btn" aria-label="Add">
               <i class="fas fa-plus"></i>
             </button>
             <button class="btn edit" aria-label="Edit">
@@ -2027,40 +2008,40 @@ body, html {
   </div>
 </div>
 <!-------- MODAL -------->
-<div class="modal" id="simpleModal">
-  <div class="modal-content">
-    <div id="project-properties" class="card">
-      <div class="form-group">
-        <observablehq-loading></observablehq-loading><!--:437e2ff2:-->
-      </div>
-      <div class="form-group">
-        <observablehq-loading></observablehq-loading><!--:a4ca7b63:-->
-      </div>
-      <div class="form-group">
-        <div style="display:flex; flex-direction: row; align-items: center; min-height: 25.5px; gap: 60px;">
-          <span><b>Start Year</b></span> <observablehq-loading></observablehq-loading><!--:c73bfedc:-->
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="total-budget">Project length (years):</label>
-        <observablehq-loading></observablehq-loading><!--:580b039d:-->
-      </div>
-      <div class="form-group">
-        <label for="total-budget">Budget Allocation Type:</label>
-        <observablehq-loading></observablehq-loading><!--:92cf87a9:-->
-      </div>
-      <observablehq-loading></observablehq-loading><!--:acdb1373:-->
-      <div class="form-group">
-        <observablehq-loading></observablehq-loading><!--:30f103b3:-->
+<dialog style="padding:0.2em; border-width:0px;">
+  <div id="project-properties" class="card">
+    <div class="form-group">
+      <observablehq-loading></observablehq-loading><!--:437e2ff2:-->
+    </div>
+    <div class="form-group">
+      <observablehq-loading></observablehq-loading><!--:a4ca7b63:-->
+    </div>
+    <div class="form-group">
+      <div style="display:flex; flex-direction: row; align-items: center; min-height: 25.5px; gap: 60px;">
+        <span><b>Start Year</b></span> <observablehq-loading></observablehq-loading><!--:c73bfedc:-->
       </div>
     </div>
+    <div class="form-group">
+      <label for="total-budget">Project length (years):</label>
+      <observablehq-loading></observablehq-loading><!--:580b039d:-->
+    </div>
+    <div class="form-group">
+      <label for="total-budget">Budget Allocation Type:</label>
+      <observablehq-loading></observablehq-loading><!--:92cf87a9:-->
+    </div>
+    <!-- ${svg} -->
+    <div class="form-group">
+    <form method="dialog">
+      <observablehq-loading></observablehq-loading><!--:e5ccc09b:-->
+      </form> 
+    </div>
   </div>
-</div>
-<div class="observablehq observablehq--block"><!--:e39efb46:--></div>
+</dialog>
+<div class="observablehq observablehq--block"><!--:26166479:--></div>
 <div class="observablehq observablehq--block"><!--:a6305aae:--></div>
 <div class="observablehq observablehq--block"><!--:a4b237c1:--></div>
 <!-- ---------------- Input form declarations ---------------- -->
-<div class="observablehq observablehq--block"><!--:b95bc78e:--></div>
+<div class="observablehq observablehq--block"><!--:d544508b:--></div>
 <div class="observablehq observablehq--block"><!--:fbf1b5a3:--></div>
 <div class="observablehq observablehq--block"><!--:39e29da4:--></div>
 <div class="observablehq observablehq--block"><!--:30ef2d9c:--></div>
@@ -2072,7 +2053,7 @@ body, html {
 <div class="observablehq observablehq--block"><!--:81c82f44:--></div>
 <!-- ---------------- Sortable Table ---------------- -->
 <div class="observablehq observablehq--block"><!--:e419fec7:--></div>
-<div class="observablehq observablehq--block"><!--:20dd7e95:--></div>
+<div class="observablehq observablehq--block"><!--:dbb36174:--></div>
 <div class="observablehq observablehq--block"><!--:929663a0:--></div>
 <!-- ---------------- Glyph Maps ---------------- -->
 <div class="observablehq observablehq--block"><!--:0237730d:--></div>
